Improved Updating of FdoNanopubs
- If the public key is the same we use http://purl.org/nanopu/x/supersedes
- Check out: TheseTestsRequireOtherSystemsIT.exampleForUpdatingFdoNanopub